<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#cad2c5">

    <!--<LinearLayout
        android:id="@+id/title_add_button_row"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#84a98c"
        android:gravity="center">
        <TextView
            android:id="@+id/title_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:text="@string/app_title"
            android:textSize="38sp"
            android:textColor="@color/colorText"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/add_snack_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/add_button_selector"
            android:text="@string/add_snack_button"
            android:textSize="28sp"
            android:textColor="#2f3e46"/>
    </LinearLayout>-->
    <LinearLayout
        android:id="@+id/filter_row"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cad2c5"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:paddingHorizontal="14dp">
            <CheckBox
                android:id="@+id/veggie_filter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:checked="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veggie_filter_text"
                android:textSize="26sp"
                android:textColor="@android:color/holo_green_dark"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp">
            <CheckBox
                android:id="@+id/non_veggie_filter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:checked="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_veggie_filter_text"
                android:textSize="26sp"
                android:textColor="@android:color/holo_red_dark"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/border_view"
        app:layout_constraintTop_toBottomOf="@id/filter_row"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>
    <ListView
        android:id="@+id/snack_listview"
        app:layout_constraintTop_toBottomOf="@id/border_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/submit_order_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/submit_order_text"
        android:textSize="32sp"
        android:textColor="@color/colorBackground"
        android:background="@drawable/submit_button_selector"/>

</androidx.constraintlayout.widget.ConstraintLayout>